2003-10-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* comg-command.c

	Fixed a typo, and removed an assertion
	
	* cong-modification.h

	Diabled bad declarations

	* cong-command.h, cong-command.c

	Added split3 modification
	
	* cong-node-modification-set-text.c

	Implemented what had been a stub
	
	* cong-command.c, cong-command.h

	Added lots of compound modifications

	* cong-modification-cursor-change.c, cong-modification-cursor-change.h, cong-modification-selection-change.c, cong-modification-selection-change.h, Makefile.am

	New files:  new atomic modification subclasses

2003-09-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-radio-button.c

	Block/unblock signals when handling attribute changes to avoid polluting undo histroy with excess generated attribute changes commands

	* plugin-cleanup-source.c

	First attempt at undo/redo for source cleanup
	
	* cong-node-modification-add-after.c, cong-node-modification-add-before.c

	Implementation of Undo/Redo for these tree operations
	
	* cong-command.c

	Undo/redo of a command now wrapped with begin/end_edit

2003-09-29  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-wrapper.c, cong-node-properties-dialog.c

	More Undo/Redo support
	
	* cong-primary-window.c

	Added Undo/Redo to toolbar

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command-history.c, cong-command.c, cong-command.h, cong-document.c, cong-document.h, global.h

	More work on undo/redo
	