@@ -1,5 +1,9 @@
 2003-10-01  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c
+
+	Implemented stubs
+	
 	* comg-command.c
 
 	Fixed a typo, and removed an assertion
